--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -3,3 +3,23 @@
 
 @use './var.scss';
 @forward './var.scss';
+
+.page {
+  padding: 24px;
+  max-width: 400px;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+  gap: 32px;
+}
+.header {
+  display: flex;
+  justify-content: space-between;
+}
+.button {
+  transition: opacity 0.7s;
+  cursor: pointer;
+  &:hover {
+    opacity: 0.7;
+  }
+}
